--- a/A1/memory_game/src/my-app.html
+++ b/A1/memory_game/src/my-app.html
@@ -1,1 +1,9 @@
-<div class="message">${message}</div>
+<import from="./views/card"></import>
+<!-- clicking the button triggers the generate method in my‐app.ts-->
+<button click.trigger="generate()">Start</button>
+<div class="grid">
+<!--for each element in the "cards" array we create a memory‐card view 
+and bind the card values --> 
+<card repeat.for="c of cards" symbol.bind="c.symbol"
+visible.bind="c.visible"click.trigger="showCard(c)"></card>
+</div>
